Version ClaSS-0.8.56 release (2008/10/20)
-----------------------------------------



Version ClaSS-0.8.55 release (2008/10/10)
-----------------------------------------

Reworked the enrolments' tables. Applications now have a config option
to have 'live' numbers or 'static' numbers to be updated manually.

Bugfix to the incidents table - fresh installs were missing their
category field.

Replaced community_capacity scripts with enrolment_edit to allow a
list of communities to have either capacity or count values
maintained.

A bugfix to fetch_enrolmentAssessments.

Opened up the "other groups" search option to all users of the
InfoBook - this needs have a config option about the types of groups
to be listed.

A bugfix to calculating current balances for budgets - special action
orders (ie. petty cash) without an invoice were being overlooked.


Version ClaSS-0.8.54 release (2008/09/31)
-----------------------------------------

The score table has an extra field called extra for annotating cells
in the MarkBook. This is only implemented so far for homework, the
extra field records wether the work was returned late or not.

Fixed a bug which broken printing contact labels when a contact was
flagged for mail but had no address.



Version ClaSS-0.8.53 release (2008/08/31)
-----------------------------------------

Bugfix to the auto-generating of the budgetcode for sub-budgets.

Renaming a formgroup now renames any associated teaching classes in the
MarkBook too.

A field added to the orderinvoice table to allow for credit instead of
debit - affects only the projected balance for a budget.

Summary attendnace button added to the Register.

Replaced the green square with a select for lates during registration
and has associated latecodes.

Now allows for single or double registration dependent upon the
section of the school as defined in school.php.



Version ClaSS-0.8.52 release (2008/08/13)
-----------------------------------------
