@@ -45,7 +45,7 @@ div#logbook {
 	position:absolute; left:0%; top:4.4%; width:18%; height:95.15%; 
 	border:0; padding:0;
 	/* -moz-border-radius:0 0 0 18%; */
-    background-color:#444444;
+	background-color:#444444;
 	}
 /***************************************************************************/
 /* controls the book tabs along the top*/
